--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "chocolate_bar_prjct",
   "version": "1.0.0",
   "description": "ai project for chocolate bars",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "PJATK marketing team",
