--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
     "server": "nodemon server"
   },
   "dependencies": {
-    "openai": "^3.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "openai": "^3.2.1",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   }
 }
